Challenge Unidad 01 Sprint 03

--- a/02_Herramientas_Avanzadas/Sprint_03/Unidad_01_Numpy_I/03_Practica_Obligatoria/18_Practica_Obligatoria_Numpy_I.ipynb
+++ b/02_Herramientas_Avanzadas/Sprint_03/Unidad_01_Numpy_I/03_Practica_Obligatoria/18_Practica_Obligatoria_Numpy_I.ipynb
@@ -77,10 +77,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matriz productos por persona\n",
+      " [[6 5 3 1]\n",
+      " [3 6 2 2]\n",
+      " [3 4 3 1]]\n",
+      "Matriz de precios por tienda\n",
+      " [[ 1.5  1. ]\n",
+      " [ 2.   2.5]\n",
+      " [ 5.   4.5]\n",
+      " [16.  17. ]]\n",
+      "Matriz del coste total por persona y tienda\n",
+      " [[50.  49. ]\n",
+      " [58.5 61. ]\n",
+      " [43.5 43.5]]\n",
+      "Recomendamos a Rafa comprar en Starbucks.\n",
+      "Recomendamos a Nacho comprar en Manolo Bake.s\n",
+      "Clara puede comprar tanto en Manolo Bakes como en Starbucks.\n"
+     ]
+    }
+   ],
+   "source": [
+    "matriz_productos = [[6,5,3,1],\n",
+    "                    [3,6,2,2],\n",
+    "                    [3,4,3,1]]\n",
+    "matriz_precios = [[1.5,1.0],\n",
+    "                  [2.0,2.5],\n",
+    "                  [5.0,4.5],\n",
+    "                  [16.0,17.0]]\n",
+    "productos_np = np.array(matriz_productos)\n",
+    "precios_np = np.array(matriz_precios)\n",
+    "precios_traspuesta = np.array(precios_np.T) #Me he complicado y pensé que lo necesitaba\n",
+    "print(\"Matriz productos por persona\\n\",productos_np)\n",
+    "print(\"Matriz de precios por tienda\\n\",precios_np)\n",
+    "matriz_coste = productos_np.dot(precios_np)\n",
+    "print(\"Matriz del coste total por persona y tienda\\n\",matriz_coste)\n",
+    "persona = \"\"\n",
+    "\n",
+    "for fila in range(len(matriz_coste)):\n",
+    "    if fila == 0:\n",
+    "        persona = \"Rafa\"\n",
+    "    if fila == 1:\n",
+    "        persona = \"Nacho\"\n",
+    "    if fila == 2:\n",
+    "        persona = \"Clara\"\n",
+    "    minimo = min(matriz_coste[fila])\n",
+    "    if matriz_coste[fila][0] == matriz_coste[fila][1]:\n",
+    "        print(f\"{persona} puede comprar tanto en Manolo Bakes como en Starbucks.\")\n",
+    "    elif minimo == matriz_coste[fila][0]:\n",
+    "        print(f\"Recomendamos a {persona} comprar en Manolo Bake.s\")\n",
+    "    elif minimo == matriz_coste[fila][1]:\n",
+    "        print(f\"Recomendamos a {persona} comprar en Starbucks.\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -131,10 +194,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Toy Story\n",
+      " [0, 1, 1, 1, 0]\n",
+      "Jumanji\n",
+      " [0, 1, 0, 0, 0]\n",
+      "Mortal Kombat\n",
+      " [1, 1, 0, 0, 0]\n",
+      "Pocahontas\n",
+      " [0, 0, 1, 0, 1]\n",
+      "Películas\n",
+      " {'Toy Story': [0, 1, 1, 1, 0], 'Jumanji': [0, 1, 0, 0, 0], 'Mortal Kombat': [1, 1, 0, 0, 0], 'Pocahontas': [0, 0, 1, 0, 1]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "toy_story = [\"Aventura\",\"Animación\",\"Comedia\"]\n",
+    "jumanji = [\"Aventura\"]\n",
+    "mortal_kombat = [\"Acción\",\"Aventura\"]\n",
+    "pocahontas = [\"Animación\",\"Romance\"]\n",
+    "asignacion_generos = [\"Acción\",\"Aventura\",\"Animación\",\"Comedia\",\"Romance\"]\n",
+    "\n",
+    "def asignar_valores(vector,vector_generos):\n",
+    "    nuevo_vector = []\n",
+    "\n",
+    "    for genero in vector_generos:\n",
+    "        valor = 0\n",
+    "        if genero in vector:\n",
+    "            valor = 1\n",
+    "        nuevo_vector.append(valor)\n",
+    "    return nuevo_vector\n",
+    "\n",
+    "vec_toy_story = asignar_valores(toy_story,asignacion_generos)\n",
+    "vec_jumanji = asignar_valores(jumanji,asignacion_generos)\n",
+    "vec_mortal_kombat = asignar_valores(mortal_kombat,asignacion_generos)\n",
+    "vec_pocahontas = asignar_valores(pocahontas,asignacion_generos)\n",
+    "\n",
+    "print(\"Toy Story\\n\",vec_toy_story)\n",
+    "print(\"Jumanji\\n\",vec_jumanji)\n",
+    "print(\"Mortal Kombat\\n\",vec_mortal_kombat)\n",
+    "print(\"Pocahontas\\n\",vec_pocahontas)\n",
+    "peliculas = {\"Toy Story\": vec_toy_story,\n",
+    "             \"Jumanji\": vec_jumanji,\n",
+    "             \"Mortal Kombat\": vec_mortal_kombat,\n",
+    "             \"Pocahontas\": vec_pocahontas}\n",
+    "print(\"Películas\\n\",peliculas)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -147,10 +258,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matriz Películas\n",
+      " {'Toy Story': [0, 1, 1, 1, 0], 'Jumanji': [0, 1, 0, 0, 0], 'Mortal Kombat': [1, 1, 0, 0, 0], 'Pocahontas': [0, 0, 1, 0, 1]}\n",
+      "Dimensión: 0\n",
+      "Shape: ()\n",
+      "Tamaño: 1\n",
+      "Tipo: <class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "matriz_peliculas = np.array(peliculas)\n",
+    "print(\"Matriz Películas\\n\",matriz_peliculas)\n",
+    "print(f\"Dimensión: {matriz_peliculas.ndim}\")\n",
+    "print(f\"Shape: {matriz_peliculas.shape}\")\n",
+    "print(f\"Tamaño: {matriz_peliculas.size}\")\n",
+    "print(f\"Tipo: {type(matriz_peliculas)}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -162,10 +293,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La película Toy Story es más parecia a Jumanji\n",
+      "La película Jumanji es más parecia a Mortal Kombat\n",
+      "La película Mortal Kombat es más parecia a Jumanji\n",
+      "La película Pocahontas es más parecia a Toy Story\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sim_cos(vector_ref,vector_comp):\n",
+    "    dot_product = np.dot(vector_ref,vector_comp)\n",
+    "    norma_ref = np.linalg.norm(vector_ref)\n",
+    "    norma_comp = np.linalg.norm(vector_comp)\n",
+    "    cos_vref_vcomp = dot_product / (norma_ref * norma_comp)\n",
+    "    return float(round(cos_vref_vcomp,2))\n",
+    "indice = 0\n",
+    "peliculas_referencia = list(peliculas.keys())\n",
+    "for pelicula, vector in peliculas.items():\n",
+    "    vector_cosenos = []\n",
+    "    vector_titulos = []\n",
+    "    for indice, titulo in enumerate(peliculas_referencia):\n",
+    "        vector_referencia = peliculas[titulo]\n",
+    "        valor_coseno= (sim_cos(vector_referencia,vector))\n",
+    "        if valor_coseno != 1:\n",
+    "            vector_titulos.append(titulo)\n",
+    "            vector_cosenos.append(valor_coseno)\n",
+    "    similar = max(vector_cosenos)\n",
+    "    i = vector_cosenos.index(similar)\n",
+    "    print(f\"La película {pelicula} es más parecia a {vector_titulos[i]}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -186,13 +349,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Curso_Online_DATA",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.4"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.4"
   }
  },
  "nbformat": 4,
