Challenge Unidad 2 Sprint 3
Los barquitos...

--- a/02_Herramientas_Avanzadas/Sprint_03/Unidad_02_Numpy_II/03_Practica_Obligatoria/18_Practica_Obligatoria_Numpy_II.ipynb
+++ b/02_Herramientas_Avanzadas/Sprint_03/Unidad_02_Numpy_II/03_Practica_Obligatoria/18_Practica_Obligatoria_Numpy_II.ipynb
@@ -74,10 +74,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 5  4]\n",
+      " [ 2 -3]\n",
+      " [ 3  5]\n",
+      " [-5  4]\n",
+      " [ 0 -1]\n",
+      " [ 3  2]\n",
+      " [-1  1]\n",
+      " [ 5 -2]\n",
+      " [-5  3]\n",
+      " [-5  1]\n",
+      " [-2  5]\n",
+      " [ 0  4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "nuevos_alumnos = [[-2,5],[0,4]]\n",
+    "alumnos_aidone = np.concatenate([np.array(alumnos_aidone),np.array(nuevos_alumnos)])\n",
+    "print(alumnos_aidone)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 5  4]\n",
+      " [ 2 -3]\n",
+      " [ 3  5]\n",
+      " [-5  4]\n",
+      " [ 0 -1]\n",
+      " [ 3  2]\n",
+      " [-1  1]\n",
+      " [ 5 -2]\n",
+      " [-5  3]\n",
+      " [-5  1]\n",
+      " [-2  5]\n",
+      " [ 0  4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reinicio alumnos aidone\n",
+    "alumnos_aidone = [[5, 4], \n",
+    " [2, -3],\n",
+    " [3, 5],\n",
+    " [-5, 4],\n",
+    " [0, -1],\n",
+    " [3, 2],\n",
+    " [-1, 1],\n",
+    " [5, -2],\n",
+    " [-5, 3],\n",
+    " [-5, 1]]\n",
+    "\n",
+    "alumnos_aidone = np.vstack([alumnos_aidone,nuevos_alumnos])\n",
+    "print(alumnos_aidone)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -94,16 +159,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]]\n",
+      "Para Rodrigo con vector [5 4]:\n",
+      "CAI\n",
+      "Para Lucia con vector [ 2 -3]:\n",
+      "ER\n",
+      "Para Alejandro con vector [3 5]:\n",
+      "CAI\n",
+      "Para Valeria con vector [-5  4]:\n",
+      "NMPC\n",
+      "Para Javier con vector [ 0 -1]:\n",
+      "ER\n",
+      "Para Camila con vector [3 2]:\n",
+      "CAI\n",
+      "Para Diego con vector [-1  1]:\n",
+      "NMPC\n",
+      "Para Gabriela con vector [ 5 -2]:\n",
+      "ER\n",
+      "Para Mateo con vector [-5  3]:\n",
+      "NMPC\n",
+      "Para Sofía con vector [-5  1]:\n",
+      "NMPC\n",
+      "Para Teresa con vector [-2  5]:\n",
+      "NMPC\n",
+      "Para Udo con vector [0 4]:\n",
+      "CAI\n"
+     ]
+    }
+   ],
    "source": [
     "alumnos_ref = [\"Rodrigo\",\"Gabriela\",\"Mateo\"]\n",
     "lista_alumnos = ['Rodrigo', 'Lucia', 'Alejandro', 'Valeria', 'Javier', 'Camila', 'Diego', 'Gabriela', 'Mateo', 'Sofía','Teresa','Udo']\n",
     "curso_asignado = [\"CAI\",\"ER\",\"NMPC\"]\n",
     "\n",
     "##### CAMBIA LA SIGUIENTE LINEA, según 2.1 ######\n",
-    "diccionario_reparto = {} \n",
+    "diccionario_reparto = {}\n",
+    "matriz_reparto = np.zeros((12,3))\n",
+    "print(matriz_reparto) \n",
     "#################################################\n",
     "\n",
     "num_alumnos = len(lista_alumnos)\n",
@@ -112,7 +222,7 @@
     "    \n",
     "    alumno = lista_alumnos[i_vector]\n",
     "    vector_alumno = alumnos_aidone[i_vector]\n",
-    "    print(f\"Par {alumno} con vector {vector_alumno}:\")\n",
+    "    print(f\"Para {alumno} con vector {vector_alumno}:\")\n",
     "\n",
     "    distancia_minima = 99999999 \n",
     "    indice_distancia_minima = -1\n",
@@ -124,13 +234,13 @@
     "        vec_ref = alumnos_aidone[indice_alumno_ref] \n",
     "        \n",
     "        ####### 2.2 MODIFICA EL SIGUIENTE FRAGMENTO PARA UTILIZAR METODOS Y FuNCIONES NUMPY, recuerda que la norma se obtiene con np.linalg.norm ####\n",
-    "        distancia = distancia_2d(vector, vec_ref, 1) # Obtenemos la distancia \n",
+    "        distancia = np.linalg.norm(vector_alumno - vec_ref) # Obtenemos la distancia \n",
     "        #########################################################################################################################################\n",
     "        vector_distancias[indice_curso] = distancia\n",
     "   \n",
     "    ######################################################### 2.3 COMPLETA LA SIGUIENTE LINEA ######################################\n",
-    "    indice_curso_elegido = __.___(______)\n",
-    "    print(f\"{____________[___________]}\")\n",
+    "    indice_curso_elegido = np.argmin(vector_distancias)\n",
+    "    print(f\"{curso_asignado[indice_curso_elegido]}\")\n",
     "    ###############################################################################################"
    ]
   },
@@ -143,9 +253,23 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Para Teresa el curso elegido es NMPC\n",
+      "Para Udo el curso elegido es CAI\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Para Teresa el curso elegido es NMPC\")\n",
+    "print(\"Para Udo el curso elegido es CAI\")"
+   ]
   },
   {
    "attachments": {
@@ -188,24 +312,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tablero inicial\n",
+      " [[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']]\n",
+      "Barcos colocados\n",
+      " [[' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' 'O' ' ' 'O' 'O' 'O' 'O' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']]\n",
+      "¡Has acertado!\n",
+      "Primer disparo\n",
+      " [[' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' 'O' ' ' 'O' 'X' 'O' 'O' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']]\n",
+      "¡Agua!. Sigue intentándolo.\n",
+      "Segundo disparo\n",
+      " [[' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' 'O' ' ' 'O' 'X' 'O' 'O' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' '-' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']]\n",
+      "Coloco el último barco\n",
+      " [[' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' 'O' ' ' 'O' 'X' 'O' 'O' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' '-' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']]\n"
+     ]
+    }
+   ],
    "source": [
-    "import random"
+    "import random\n",
+    "def crear_tablero(filas,columnas):\n",
+    "    if type(filas) != int or type(columnas) != int:\n",
+    "        TypeError(\"Las filas y columnas tienen que ser enteros\")\n",
+    "    else:\n",
+    "        tablero = np.full((filas,columnas),\" \")\n",
+    "    return tablero\n",
+    "\n",
+    "def colocar_barco(barco,tablero):\n",
+    "    for x,y in barco:\n",
+    "\n",
+    "        if not (0 <= x < tablero.shape[0] and 0 <= y < tablero.shape[1]):\n",
+    "            raise ValueError(f\"El barco {barco} no puede colocarse fuera del tablero {x,y}\")\n",
+    "        else: \n",
+    "            if tablero[x,y] == 'O':\n",
+    "                raise ValueError(f\"No es posible colocar el barco {barco} en una posición ocupada {x,y}\")\n",
+    "            else:\n",
+    "                tablero[x,y] = 'O'\n",
+    "    \n",
+    "    return tablero\n",
+    "\n",
+    "def disparar(fila,columna,tablero):\n",
+    "    if tablero[fila,columna] == 'O':\n",
+    "        print(\"¡Has acertado!\")\n",
+    "        tablero[fila,columna] = 'X'\n",
+    "    else:\n",
+    "        print(\"¡Agua!. Sigue intentándolo.\")\n",
+    "        tablero[fila,columna] = '-'\n",
+    "    return tablero\n",
+    "\n",
+    "def generar_barco(tamaño):\n",
+    "    inicio_x = np.random.randint(0,10)\n",
+    "    inicio_y = np.random.randint(0,10)\n",
+    "    barco_rndm = np.array([(inicio_x,inicio_y)])\n",
+    "    cardinales = [\"N\",\"S\",\"E\",\"O\"]\n",
+    "    orientacion = random.choice(cardinales) # Genero la orientación al azar\n",
+    "    # En función de la orientación, creo el resto del barco según la variable tamaño\n",
+    "    if orientacion == \"N\":\n",
+    "        for i in range(tamaño-1):\n",
+    "            inicio_x = inicio_x -1\n",
+    "            barco_rndm = np.concatenate([(barco_rndm),np.array([(inicio_x,inicio_y)])])\n",
+    "    elif orientacion == \"S\":\n",
+    "        for i in range(tamaño-1):\n",
+    "            inicio_x = inicio_x +1\n",
+    "            barco_rndm = np.concatenate([(barco_rndm),np.array([(inicio_x,inicio_y)])])\n",
+    "    elif orientacion == \"E\":\n",
+    "        for i in range(tamaño-1):\n",
+    "            inicio_y = inicio_y -1\n",
+    "            barco_rndm = np.concatenate([(barco_rndm),np.array([(inicio_x,inicio_y)])])\n",
+    "    elif orientacion == \"O\":\n",
+    "        for i in range(tamaño-1):\n",
+    "            inicio_y = inicio_y +1\n",
+    "            barco_rndm = np.concatenate([(barco_rndm),np.array([(inicio_x,inicio_y)])])\n",
+    "    return barco_rndm\n",
+    "\n",
+    "# Declaro los barcos predefinidos\n",
+    "barco_2 = np.array([(0,1),(1,1)])\n",
+    "barco_4 = [(1,3),(1,4),(1,5),(1,6)]\n",
+    "\n",
+    "# Creo el tablero según las medidas 10x10\n",
+    "tablero = crear_tablero(10,10)\n",
+    "print(\"Tablero inicial\\n\",tablero)\n",
+    "\n",
+    "# Coloco los dos barcos\n",
+    "colocar_barco(barco_2,tablero)\n",
+    "colocar_barco(barco_4,tablero)\n",
+    "print(\"Barcos colocados\\n\",tablero)\n",
+    "\n",
+    "# Disparo a un barco\n",
+    "disparar(1,4,tablero)\n",
+    "print(\"Primer disparo\\n\",tablero)\n",
+    "# Disparo al agua\n",
+    "disparar(3,5,tablero)\n",
+    "print(\"Segundo disparo\\n\",tablero)\n",
+    "\n",
+    "# Genero un barco aleatorio\n",
+    "barco_rndm = (generar_barco(4))\n",
+    "colocar_barco(barco_rndm,tablero)\n",
+    "\n",
+    "print(\"Coloco el último barco\\n\",tablero)\n",
+    "\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.4 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -219,14 +481,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.13.4"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "90139cb9a825bf3d63f6f6704e828dbd1ff7edbd4d0c6e906a71235d6efc74af"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
